[gd_scene load_steps=36 format=3 uid="uid://6br8blsx862r"]

[ext_resource type="Script" path="res://assets/scripts/Player.gd" id="1_0krty"]
[ext_resource type="Texture2D" uid="uid://bghr2xv1ake67" path="res://assets/sprites/Player sprite sheet jump.png" id="2_0k3t1"]
[ext_resource type="Texture2D" uid="uid://gmwua7jr0ob2" path="res://assets/sprites/Player sprite sheet.png" id="3_7d1xo"]
[ext_resource type="Script" path="res://scenes/Sprite2D.gd" id="3_hj8q6"]
[ext_resource type="AudioStream" uid="uid://cwdjk5i1b31ko" path="res://assets/sound effects/running 1.mp3" id="4_ogmx3"]
[ext_resource type="Texture2D" uid="uid://mfx0dgientos" path="res://assets/sprites/skidding 2.png" id="5_gex7e"]
[ext_resource type="AudioStream" uid="uid://dorjydm3s18o5" path="res://assets/sound effects/jumping 1.mp3" id="5_xnxsb"]
[ext_resource type="AudioStream" uid="uid://r6rk0hu4y7su" path="res://assets/sound effects/jumping 2.mp3" id="6_6ftnp"]
[ext_resource type="Texture2D" uid="uid://dxm37ait8or0f" path="res://assets/sprites/jump.png" id="6_o4v65"]
[ext_resource type="AudioStream" uid="uid://yvmnf8338wif" path="res://assets/sound effects/jumping 3.mp3" id="7_hqubw"]
[ext_resource type="AudioStream" uid="uid://csls0ly1om2k6" path="res://assets/sound effects/jumping 4.mp3" id="8_6op7e"]
[ext_resource type="AudioStream" uid="uid://bf8bwoi15qx3u" path="res://assets/sound effects/coin 3.mp3" id="9_61ew6"]
[ext_resource type="Script" path="res://assets/scripts/Player Detector.gd" id="9_sh1rp"]
[ext_resource type="AudioStream" uid="uid://d1m2dg22rcd4b" path="res://assets/sound effects/wind.mp3" id="10_5vogu"]
[ext_resource type="AudioStream" uid="uid://dkbb1hboe1y6p" path="res://assets/sound effects/unhappy 1.mp3" id="10_jsyy7"]
[ext_resource type="AudioStream" uid="uid://20k6w1ubhaih" path="res://assets/sound effects/dragging.mp3" id="11_juwi3"]
[ext_resource type="AudioStream" uid="uid://fjtctj3s3s4g" path="res://assets/sound effects/unhappy 2.mp3" id="11_s2yv0"]
[ext_resource type="AudioStream" uid="uid://db8a3k3bnf348" path="res://assets/sound effects/unhappy 3.mp3" id="12_a5ivf"]
[ext_resource type="AudioStream" uid="uid://drggea45j013b" path="res://assets/sound effects/unhappy 4.mp3" id="13_4rowl"]
[ext_resource type="AudioStream" uid="uid://b4gurkou6i5hd" path="res://assets/sound effects/unhappy 5.mp3" id="14_8bypx"]
[ext_resource type="AudioStream" uid="uid://cmi1kyryficxq" path="res://assets/sound effects/coin 4.mp3" id="18_xprbu"]
[ext_resource type="Texture2D" uid="uid://pcjpdy1ep0xs" path="res://assets/sprites/Coin.png" id="19_q5a7p"]
[ext_resource type="Texture2D" uid="uid://c565wqs868hhs" path="res://assets/sprites/cry.png" id="22_8bmn1"]
[ext_resource type="Script" path="res://scenes/playerName.gd" id="23_62615"]

[sub_resource type="Animation" id="Animation_rftai"]
resource_name = "Jumping"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_0k3t1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_x34gv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7d1xo")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ghxjb"]
resource_name = "Running"
length = 0.77
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7d1xo")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ywvbi"]
_data = {
"Jumping": SubResource("Animation_rftai"),
"RESET": SubResource("Animation_x34gv"),
"Running": SubResource("Animation_ghxjb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25xv6"]
size = Vector2(11, 79)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jghx3"]
emission_shape = 1
emission_sphere_radius = 25.0
particle_flag_disable_z = true
spread = 50.0
gravity = Vector3(0, 10, 0)
initial_velocity_min = -250.0
initial_velocity_max = 250.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.75
scale_max = 1.25
hue_variation_max = 0.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ob1no"]
emission_shape = 1
emission_sphere_radius = 25.0
particle_flag_disable_z = true
gravity = Vector3(100, -100, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.5
scale_max = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_72tlu"]
emission_shape = 1
emission_sphere_radius = 25.0
particle_flag_disable_z = true
gravity = Vector3(-500, -100, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.5
scale_max = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w0ig1"]
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
initial_velocity_min = -100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.5
scale_max = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2dk5"]
size = Vector2(11, 79)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ci8wq"]
emission_shape = 1
emission_sphere_radius = 15.0
particle_flag_disable_z = true
gravity = Vector3(0, 50, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 5.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(676, 405)
collision_layer = 3
collision_mask = 4
script = ExtResource("1_0krty")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_7d1xo")
hframes = 8
script = ExtResource("3_hj8q6")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ywvbi")
}

[node name="Player Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6.5)
shape = SubResource("RectangleShape2D_25xv6")

[node name="moneyJumping" type="GPUParticles2D" parent="."]
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_jghx3")
texture = ExtResource("19_q5a7p")
lifetime = 0.15
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="skidding" type="GPUParticles2D" parent="."]
position = Vector2(20, 30)
emitting = false
amount = 35
process_material = SubResource("ParticleProcessMaterial_ob1no")
texture = ExtResource("5_gex7e")
lifetime = 0.25
one_shot = true
speed_scale = 0.5
randomness = 1.0

[node name="run" type="GPUParticles2D" parent="."]
position = Vector2(-20, 30)
emitting = false
amount = 35
process_material = SubResource("ParticleProcessMaterial_72tlu")
texture = ExtResource("5_gex7e")
lifetime = 0.75
one_shot = true
speed_scale = 0.75

[node name="jump" type="GPUParticles2D" parent="."]
position = Vector2(0, 40)
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_w0ig1")
texture = ExtResource("6_o4v65")
lifetime = 0.25
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="running" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ogmx3")
volume_db = 15.0
pitch_scale = 0.75

[node name="jumping1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xnxsb")

[node name="jumping2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6ftnp")

[node name="jumping3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hqubw")

[node name="jumping4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6op7e")

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_61ew6")

[node name="wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5vogu")

[node name="dragging" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_juwi3")

[node name="Player Detector" type="Area2D" parent="."]
script = ExtResource("9_sh1rp")

[node name="Player Detector Box" type="CollisionShape2D" parent="Player Detector"]
position = Vector2(0.5, 6.5)
shape = SubResource("RectangleShape2D_y2dk5")

[node name="unhappy1" type="AudioStreamPlayer2D" parent="Player Detector"]
stream = ExtResource("10_jsyy7")

[node name="unhappy2" type="AudioStreamPlayer2D" parent="Player Detector"]
stream = ExtResource("11_s2yv0")

[node name="unhappy3" type="AudioStreamPlayer2D" parent="Player Detector"]
stream = ExtResource("12_a5ivf")

[node name="unhappy4" type="AudioStreamPlayer2D" parent="Player Detector"]
stream = ExtResource("13_4rowl")

[node name="unhappy5" type="AudioStreamPlayer2D" parent="Player Detector"]
stream = ExtResource("14_8bypx")

[node name="coin" type="AudioStreamPlayer" parent="Player Detector"]
stream = ExtResource("18_xprbu")

[node name="moneyStolen" type="GPUParticles2D" parent="Player Detector"]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_jghx3")
texture = ExtResource("19_q5a7p")
lifetime = 0.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0

[node name="cry" type="GPUParticles2D" parent="Player Detector"]
position = Vector2(7, -30)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_ci8wq")
texture = ExtResource("22_8bmn1")
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="playerName" type="Label" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -78.0
offset_right = 22.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
script = ExtResource("23_62615")

[connection signal="body_entered" from="Player Detector" to="Player Detector" method="_on_body_entered"]
